build: enforce Java 11 API compatibility